--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 ### Java template
 *.iml
 /.idea
-
+/.sandbox
+/out
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
